crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__nested_template_in_string_literal.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: template
---
SfcTemplateBlock {
    content: "\n  <div>{{ code }}</div>\n",
    loc: BlockLocation {
        start: 104,
        end: 129,
        tag_start: 94,
        tag_end: 140,
        start_line: 7,
        start_column: 11,
        end_line: 9,
        end_column: 1,
    },
    lang: None,
    src: None,
    attrs: {},
}
