crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__script_with_division_operator.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst x = 10 / 2\nconst y = \"test\"\nconst z = x / y\n",
    loc: BlockLocation {
        start: 14,
        end: 65,
        tag_start: 0,
        tag_end: 74,
        start_line: 1,
        start_column: 15,
        end_line: 5,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
