crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__script_with_embedded_closing_tag_in_comment.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\n// This is a comment: </script>\nconst a = 1\n/* Multi-line comment\n   </script>\n*/\nconst b = 2\n",
    loc: BlockLocation {
        start: 14,
        end: 109,
        tag_start: 0,
        tag_end: 118,
        start_line: 1,
        start_column: 15,
        end_line: 8,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
