crates/vize_atelier_sfc/src/parse/snapshots/vize_atelier_sfc__parse__tests__script_with_embedded_closing_tag_in_double_quote.snap
---
source: crates/vize_atelier_sfc/src/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst tag = \"</script>\"\nconst z = 3\n",
    loc: BlockLocation {
        start: 14,
        end: 51,
        tag_start: 0,
        tag_end: 60,
        start_line: 1,
        start_column: 15,
        end_line: 4,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
